Fix header links, margins and add wraps

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 .firstcontainer{
     background: #1F2937;
-    padding: 4px 240px 160px 240px;
+    padding: 4px 120px 160px 120px;
 }
 
 button{
@@ -53,7 +53,6 @@ button:hover{
     align-items: flex-end;
     gap: 38px;
     color: #E5E7EB;
-
 }
 
 
@@ -65,8 +64,9 @@ button:hover{
 .body{
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .content{
@@ -148,7 +148,7 @@ button:hover{
     flex-wrap: wrap;
     flex: 1;
     flex-direction: column;
-    padding: 200px 240px;
+    padding: 200px 120px;
 }
 
 .para{
@@ -172,7 +172,7 @@ button:hover{
     justify-content: space-between;
     flex-wrap: wrap;
     background: #3882F6;
-    margin: 100px 240px;
+    margin: 100px 120px;
     padding: 50px 100px;
 }
 
@@ -213,5 +213,5 @@ button:active{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 50px 240px 50px 240px;
+    padding: 50px 120px 50px 120px;
 }
